--- a/SP22/Single-cell SNV/post_processing.Rmd
+++ b/SP22/Single-cell SNV/post_processing.Rmd
@@ -62,6 +62,14 @@ for(i in names(sample_set)){
   #write.table(snv,file=sprintf("./analysis/%s.xls",i),sep="\t")
   #readRDS(file="./analysis/MSK71.rds")
 }
+
+# gt.gqc: Cell-specific genotype quality
+# gt.dpc: Cell-specific read depth
+# gt.afc: Cell-specific alternate allele frequency
+# gt.mv: Variants genotyped in < X percent of cells
+# gt.mc: Cells with genotypes in < X percent of variants
+# gt.mm: Variants mutated in < X percent of cells
+
 ```
 
 
